--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>y2down - 유튜브 다운로더</title>
   
+  <!-- Google Console 등록 -->
+  <meta name="google-site-verification" content="PLRGFIRCREAAUhBLekZOcOKygYDnS13H477rJET2LIo">
+
   <!-- 반응형 웹 (모바일 최적화) -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -49,6 +52,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  
 </head>
 <body>
   <!-- 네비게이션 바 (내부 링크 최적화) -->
