--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>y2down - 유튜브 다운로더</title>
-  
-  <!-- Google Console 등록 -->
-  <meta name="google-site-verification" content="PLRGFIRCREAAUhBLekZOcOKygYDnS13H477rJET2LIo">
 
+  <!-- Google Console 등록 -->
+  <meta name="google-site-verification" content="sAHy6KeT0P4lNOpH9X42SS3zFVrvA26xk1xdegF3YbI" />
   <!-- 반응형 웹 (모바일 최적화) -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
