--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>y2down - 유튜브 다운로더</title>
-
+  
   <!-- Google Console 등록 -->
   <meta name="google-site-verification" content="sAHy6KeT0P4lNOpH9X42SS3zFVrvA26xk1xdegF3YbI" />
   <!-- 반응형 웹 (모바일 최적화) -->
@@ -42,6 +42,16 @@
       "query-input": "required name=search_term_string"
     }
   }
+  </script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4499CBB8LT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4499CBB8LT');
   </script>
 
   <!-- Favicon -->
